[project]
name = "engtheory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard,standart]>=0.128.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.45",
]

[tool.pylint.MESSAGES CONTROL]
disable = "E1102, C0114, C0115"
